--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
 
       - name: Install Dependencies
         run: yarn
+      
+      - name: Test
+        run: yarn test
 
       - name: Build
         run: yarn build
