--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       - dev
     paths-ignore:
       - '*.md'
-      
+
   pull_request:
      branches:
       - master
@@ -22,17 +22,18 @@ env:
   FILE_PATTERN: ".{ts,tsx,js,jsx}"
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
+  runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup Node
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 14
+      - name: Install Dependencies
+        run: yarn
       - name: TypeCheck
-        run: typecheck
+        run: yarn typecheck
       - name: ESLint
         run: yarn lint
       - name: Prettier
