✨ ci.yml: eslintのscript名の指定が間違っていたので修正

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         run: yarn typecheck
 
       - name: ESLint
-        run: yarn lint
+        run: yarn eslint
 
       - name: Prettier
         run: yarn prettier
